...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="ZIx-bl-EoH" id="Zha-2W-F6e"/>
                            <outlet property="delegate" destination="ZIx-bl-EoH" id="B3J-ds-WSE"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Comics List" id="zSg-9d-KJs">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="0xi-3m-pSi">
                            <connections>
                                <segue destination="QRG-Cb-Vgm" kind="popoverPresentation" identifier="showForm" popoverAnchorBarButtonItem="0xi-3m-pSi" id="mlR-fY-MYW">
                                    <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
                                </segue>
                            </connections>
...
                                                    </textField>
                                                </subviews>
                                            </stackView>
                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="98P-TH-TEd">
                                                <rect key="frame" x="0.0" y="210" width="398" height="34"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Colorist" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mf9-5e-r96">
                                                        <rect key="frame" x="0.0" y="0.0" width="59.5" height="34"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                        <nil key="textColor"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aAr-LZ-T5W">
...
                                                <subviews>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Serie's name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kZG-pQ-hW7">
                                                        <rect key="frame" x="0.0" y="0.0" width="278.5" height="34"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits"/>
                                                    </textField>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Number in serie" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wcR-Nz-8kR">
                                                        <rect key="frame" x="286.5" y="0.0" width="111.5" height="34"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits"/>
                                                    </textField>
                                                </subviews>
                                                <constraints>
...
                                                    </segmentedControl>
                                                </subviews>
                                            </stackView>
                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="0Wr-Gj-Bvg">
                                                <rect key="frame" x="0.0" y="372" width="398" height="244.5"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Language" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nLz-k6-vcx">
                                                        <rect key="frame" x="0.0" y="0.0" width="398" height="20.5"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                        <nil key="textColor"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F08-RK-z6s">
...
